# openjpeg-rs

./: .gitignore  CLAUDE.md  Cargo.toml
docs/coverage/: c_function_mapping.md
docs/plans/: 000_master_plan.md  1000_cli_tools.md  100_foundation_primitives.md  1100_pipeline_integration.md  1101_t1_roundtrip_fix.md  1102_multi_res_subband_offset.md  200_coding_primitives.md  300_transform_coding_layer.md  400_packet_management_tile_processing.md  500_j2k_codestream.md  600_jp2_format_api.md  700_htj2k.md  800_multithreading.md  900_simd_optimization.md
src/: api.rs  error.rs  image.rs  lib.rs  tcd.rs  types.rs
src/coding/: ht_dec.rs  ht_luts.rs  mod.rs  mqc.rs  sparse_array.rs  t1.rs  t1_luts.rs  tgt.rs
src/io/: bio.rs  cio.rs  event.rs  mod.rs
src/j2k/: markers.rs  mod.rs  params.rs  read.rs  write.rs
src/jp2/: mod.rs  read.rs  write.rs
src/tier2/: mod.rs  pi.rs  t2.rs
src/transform/: dwt.rs  dwt_simd.rs  invert.rs  mct.rs  mct_simd.rs  mod.rs
tests/: roundtrip.rs
