[package]
name = "openjpeg-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
parallel = ["dep:rayon"]
cli = ["dep:clap"]
cli-png = ["cli", "dep:png"]

[dependencies]
thiserror = "2.0.18"
rayon = { version = "1.11.0", optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
png = { version = "0.18.1", optional = true }

[[bin]]
name = "opj_decompress"
path = "src/bin/opj_decompress/main.rs"
required-features = ["cli"]

[[bin]]
name = "opj_dump"
path = "src/bin/opj_dump.rs"
required-features = ["cli"]
